[gd_scene load_steps=4 format=3 uid="uid://dgj4ruvpmtudi"]

[ext_resource type="Script" path="res://sfx_scene/sfx_scene.gd" id="1_amcpp"]
[ext_resource type="AudioStream" uid="uid://dva0pc41jof8f" path="res://sfx_scene/truck.mp3" id="2_jl3l3"]
[ext_resource type="AudioStream" uid="uid://d0ordhxr24add" path="res://sfx_scene/epic_spread.mp3" id="3_6ma1j"]

[node name="sfx_scene" type="Node2D"]
script = ExtResource("1_amcpp")

[node name="SkinSoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="IntroSoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="TruckSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jl3l3")
volume_db = -10.876

[node name="ObstacleSoundPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -8.837

[node name="EpicSpreadSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6ma1j")
